refact():fetch order
add filter to the fetch order and regenerate swagger and change all depended
